Opened 13 years ago

Closed 13 years ago

#8523 closed bug (fixed)

[Deskbar] Targeted handler does not belong to the looper

Reported by: diver Owned by: anevilyak
Priority: blocker Milestone: R1/alpha4
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #8573
Platform: All

Description

This is hrev44113.

Deskbar crashed while trying to check ctrl+alt dragging.

Thread 157 called debugger(): Targeted handler does not belong to the looper.
[...]
[Switching to team /boot/system/Deskbar (115) thread w>Deskbar (157)]
0xffff0112 in ?? ()
(gdb) bt
#0  0xffff0112 in ?? ()
#1  0x006af7f0 in debugger () from /boot/system/lib/libroot.so
#2  0x0032e5f8 in BLooper::_TopLevelFilter () from /boot/system/lib/libbe.so
#3  0x003e0d95 in BWindow::task_looper () from /boot/system/lib/libbe.so
#4  0x0032ec76 in BLooper::_task0_ () from /boot/system/lib/libbe.so
#5  0x006b3247 in thread_entry () from /boot/system/lib/libroot.so
#6  0x780f6fec in ?? ()
(gdb)

Change History (6)

comment:1 by anevilyak, 13 years ago

Looks like this isn't a new problem...I'm able to reproduce it with regular dragging as well, even with my changes reverted. I suspect this is a race condition having to do with some of the weirdness Deskbar appears to be doing with ExpandoMenuBar when changing configurations.

comment:2 by diver, 13 years ago

Blocking: 8573 added

comment:3 by diver, 13 years ago

Milestone: R1R1/alpha4

comment:4 by jscipione, 13 years ago

I cannot reproduce this on hrev44087 so it appears to have been introduced by hrev44112. After hrev44112 dragging from vertical mode to mini mode and back to vertical produces this crash reliably.

comment:5 by jscipione, 13 years ago

Priority: normalblocker

Setting this as a blocker for R1A4. We can't release with such an easily triggered crashing bug in Deskbar.

comment:6 by anevilyak, 13 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev44382.

Note: See TracTickets for help on using tickets.