Fix #8523.

- When the message filter would receive and process a mouse moved message,
  if the message resulted in causing the deskbar to relocate or reorient
  itself, it was possible for the expando view to become detached from
  the looper. Consequently, if the intercepted mouse moved happened to have
  come from the latter, when returning out of the filter the view would no
  longer have a target looper, triggering a debugger condition in BLooper.
  In order to prevent this situation, we now dispatch a message asking for
  the layout change to occur asynchronously.